--- a/zalando-HTML-1080x1920/index.html
+++ b/zalando-HTML-1080x1920/index.html
@@ -29,7 +29,7 @@
 </head>
 <body>
   <div id="banner"></div>
-  <script src="https://dentsucreativestudio.github.io/canda-dooh/data/01-wijnegem/vertical-images-settings.js"></script>
+  <script src="https://github.com/dentsucreativestudio/zalando-ooh/blob/main/data/images.js"></script>
   <script>
      var banner = document.querySelector("#banner");
      
