--- a/zalando-HTML-1080x1920/index.html
+++ b/zalando-HTML-1080x1920/index.html
@@ -14,7 +14,7 @@
       #banner {  font-family: Arial, Helvetica, sans-serif; background-color: white;         box-sizing: border-box;         cursor: pointer;     overflow: hidden;        position: relative; visibility: hidden; display:flex; align-items:center; align-content: space-around; text-align:center;     
       width:  1080px;        
       height: 1920px;    
-      top: 1080px;
+      top: 0;
       left: 0;
 /*       transform: rotate(-90deg); */
       transform-origin: top left;
